Added totals on products list.

--- a/index.html
+++ b/index.html
@@ -638,6 +638,11 @@
                                 </tr>
                             </thead>
                             <tbody id="product_list"></tbody>
+                            <tfoot>
+                                <div><b>Total Sale Price: </b><span id="product_list_total_price"></span></div>
+                                <div><b>Total Purchase Price: </b><span id="product_list_total_pp"></span></div>
+                                <div><b>Total Stock: </b><span id="product_list_total_stock"></span></div>
+                            </tfoot>
                         </table>
 
                     </div>
